--- a/css/exercise.css
+++ b/css/exercise.css
@@ -5,33 +5,21 @@
     margin:0 auto;
     position:relative;
 }
-.red {
-    background-color: red;
+.main-square > div {
+    border: 2px solid black;
+    display:inline-block;
     width:250px;
     height:250px;
-    display:inline-block;
-    border:2px solid black;
-    position:absolute;
-    top:35%;
-    right:65%;
+}
+.red {
+    background-color: red;
+    margin-top: 300px;
+    margin-left: 100px;
 }
 .blue {
     background-color: blue;
-    width:250px;
-    height:250px;
-    display:inline-block;
-    border:2px solid black;
-    position:absolute;
-    top:35%;
-    right:15%;
 }
 .yellow {
     background-color: yellow;
-    width:250px;
-    height:250px;
-    display:inline-block;
-    border:2px solid black;
-    position:absolute;
-    top:35%;
-    right:40%;
+    visibility: hidden;
 }
